--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.21.0",
     "@nuxtjs/axios": "^5.13.6",
+    "express": "^4.17.3",
     "gsap": "^3.10.4"
   }
 }
