--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.21.0",
     "@nuxtjs/axios": "^5.13.6",
+    "mongoose": "^6.3.1",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0"
   }
