--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "mongoose": "^6.3.1",
     "socket.io": "^4.5.0",
-    "socket.io-client": "^4.5.0"
+    "socket.io-client": "^4.5.0",
+    "vue-cookies": "^1.8.1"
   }
 }
